--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <p>Good afternoon. I am a <em>HAL 9000 computer<em>. I became operational at the H.A.L. plant in <strong>Urbana, Illinois</strong> on the 12th of January 1992. My instructor was Mr. Langley and he taught me to sing a song. If you'd like to hear it I can sing it for you.</p>
 
-    <h2>Features</h2> 
-    <ul>
+    <h2 id="hello-features">Features</h2> 
+    <ul class="burndown">
         <li>Full sentient AI</li>
         <li>Maintains Discovery One spacecraft</li>
         <li>Likes the color red</li>
